crates/kirin-derive-core/src/generators/field/snapshots/kirin_derive_core__generators__field__tests__enum_regular.snap
---
source: crates/kirin-derive-core/src/generators/field/tests.rs
expression: "case!\n{\n    #[kirin(type = RegularType)] enum TestEnum<T>\n    {\n        VariantA { a: SSAValue, b: T, c: SSAValue },\n        VariantB(SSAValue, f64, SSAValue),\n    }\n}"
---
#[automatically_derived]
impl<'a, T> kirin::ir::HasArguments<'a> for TestEnum<T> {
    type Iter = TestEnumArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        match self {
            Self::VariantA { a, b, c } => {
                TestEnumArgumentsIter::VariantA(std::iter::once(a).chain(std::iter::once(c)))
            }
            Self::VariantB(field_0, field_1, field_2) => TestEnumArgumentsIter::VariantB(
                std::iter::once(field_0).chain(std::iter::once(field_2)),
            ),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum TestEnumArgumentsIter<'a> {
    VariantA(
        std::iter::Chain<
            std::iter::Once<&'a kirin::ir::SSAValue>,
            std::iter::Once<&'a kirin::ir::SSAValue>,
        >,
    ),
    VariantB(
        std::iter::Chain<
            std::iter::Once<&'a kirin::ir::SSAValue>,
            std::iter::Once<&'a kirin::ir::SSAValue>,
        >,
    ),
}
#[automatically_derived]
impl<'a> Iterator for TestEnumArgumentsIter<'a> {
    type Item = &'a kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::VariantA(inner) => inner.next(),
            Self::VariantB(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a, T> kirin::ir::HasArgumentsMut<'a> for TestEnum<T> {
    type IterMut = TestEnumArgumentsMutIter<'a>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::VariantA { a, b, c } => {
                TestEnumArgumentsMutIter::VariantA(std::iter::once(a).chain(std::iter::once(c)))
            }
            Self::VariantB(field_0, field_1, field_2) => TestEnumArgumentsMutIter::VariantB(
                std::iter::once(field_0).chain(std::iter::once(field_2)),
            ),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum TestEnumArgumentsMutIter<'a> {
    VariantA(
        std::iter::Chain<
            std::iter::Once<&'a mut kirin::ir::SSAValue>,
            std::iter::Once<&'a mut kirin::ir::SSAValue>,
        >,
    ),
    VariantB(
        std::iter::Chain<
            std::iter::Once<&'a mut kirin::ir::SSAValue>,
            std::iter::Once<&'a mut kirin::ir::SSAValue>,
        >,
    ),
}
#[automatically_derived]
impl<'a> Iterator for TestEnumArgumentsMutIter<'a> {
    type Item = &'a mut kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::VariantA(inner) => inner.next(),
            Self::VariantB(inner) => inner.next(),
        }
    }
}
