crates/kirin-derive-core/src/generators/field/snapshots/kirin_derive_core__generators__field__tests__struct_regular.snap
---
source: crates/kirin-derive-core/src/generators/field/tests.rs
expression: "case!\n{ #[kirin(type = T)] struct TestStruct<T> { a: SSAValue, b: f64, c: T, } }"
---
#[automatically_derived]
impl<'a, T> kirin::ir::HasArguments<'a> for TestStruct<T> {
    type Iter = TestStructArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        let Self { a, b, c } = self;
        TestStructArgumentsIter {
            inner: std::iter::once(a),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct TestStructArgumentsIter<'a> {
    inner: std::iter::Once<&'a kirin::ir::SSAValue>,
}
#[automatically_derived]
impl<'a> Iterator for TestStructArgumentsIter<'a> {
    type Item = &'a kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a, T> kirin::ir::HasArgumentsMut<'a> for TestStruct<T> {
    type IterMut = TestStructArgumentsMutIter<'a>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        let Self { a, b, c } = self;
        TestStructArgumentsMutIter {
            inner: std::iter::once(a),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct TestStructArgumentsMutIter<'a> {
    inner: std::iter::Once<&'a mut kirin::ir::SSAValue>,
}
#[automatically_derived]
impl<'a> Iterator for TestStructArgumentsMutIter<'a> {
    type Item = &'a mut kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
