crates/kirin-derive-core/src/generators/field/snapshots/kirin_derive_core__generators__field__tests__struct_unnamed_regular.snap
---
source: crates/kirin-derive-core/src/generators/field/tests.rs
expression: "case!\n{\n    #[kirin(type = T)] struct\n    TestStruct<T>(SSAValue, T, SSAValue, String, f64);\n}"
---
#[automatically_derived]
impl<'a, T> kirin::ir::HasArguments<'a> for TestStruct<T> {
    type Iter = TestStructArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        let Self(field_0, field_1, field_2, field_3, field_4) = self;
        TestStructArgumentsIter {
            inner: std::iter::once(field_0).chain(std::iter::once(field_2)),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct TestStructArgumentsIter<'a> {
    inner: std::iter::Chain<
        std::iter::Once<&'a kirin::ir::SSAValue>,
        std::iter::Once<&'a kirin::ir::SSAValue>,
    >,
}
#[automatically_derived]
impl<'a> Iterator for TestStructArgumentsIter<'a> {
    type Item = &'a kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a, T> kirin::ir::HasArgumentsMut<'a> for TestStruct<T> {
    type IterMut = TestStructArgumentsMutIter<'a>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        let Self(field_0, field_1, field_2, field_3, field_4) = self;
        TestStructArgumentsMutIter {
            inner: std::iter::once(field_0).chain(std::iter::once(field_2)),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct TestStructArgumentsMutIter<'a> {
    inner: std::iter::Chain<
        std::iter::Once<&'a mut kirin::ir::SSAValue>,
        std::iter::Once<&'a mut kirin::ir::SSAValue>,
    >,
}
#[automatically_derived]
impl<'a> Iterator for TestStructArgumentsMutIter<'a> {
    type Item = &'a mut kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
